welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:31: error: unclosed character literal
  println('test1')
                ^Array2:31: error: ')' expected but something found.
  println('test1')
                ^